streamline testing, fix up hip implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,11 @@ endif()
 
 add_library(ctausch SHARED ctausch.cpp)
 
+if(TEST_CUDA)
+    enable_language("CUDA")
+    find_library(CUDART_LIBRARY cudart ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES})
+endif()
+
 if(TEST_OPENCL)
     find_package(OpenCL REQUIRED)
     add_library(ctauschocl SHARED ctausch.cpp)
@@ -50,15 +55,11 @@ endif()
 if(TEST_HIP)
     list(APPEND CMAKE_MODULE_PATH "/opt/rocm/lib/cmake/hip")
     find_package(HIP REQUIRED)
-    # add_library(ctauschocl SHARED ctausch.cpp)
     include_directories("/opt/rocm/include")
-    # target_link_libraries(ctauschocl "${OpenCL_LIBRARIES}")
-    # target_compile_definitions(ctauschocl PRIVATE TAUSCH_OPENCL)
     if(HIP_NVIDIA)
         add_definitions(-DHIP_NVIDIA)
-        find_package(CUDA REQUIRED)
-        include_directories("${CUDA_INCLUDE_DIRS}")
-        link_libraries("${CUDA_LIBRARIES}")
+        enable_language("CUDA")
+        find_library(CUDART_LIBRARY cudart ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES})
     endif()
     if(HIP_AMD)
         add_definitions(-DHIP_AMD)
@@ -70,15 +71,13 @@ if(TESTING)
 
     enable_testing()
 
-    set(CMAKE_BUILD_TYPE "Debug")
-
-    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -DOMPI_SKIP_MPICXX")
-    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -DOMPI_SKIP_MPICXX")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -DOMPI_SKIP_MPICXX -O0 -g -Wno-deprecated-declarations")
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -DOMPI_SKIP_MPICXX -O0 -g -Wno-deprecated-declarations")
 
     # custom function to add mpi test
-    function(add_mpi_test name files ocl cuda capi hip)
+    function(add_mpi_test name senddevice recvdevice)
 
-        separate_arguments(files_list UNIX_COMMAND ${files})
+        separate_arguments(files_list UNIX_COMMAND "testing/main.cpp testing/packunpack.cpp testing/randomaccess.cpp testing/empty.cpp")
 
         # each test is run with 1, 2, and 4 mpi ranks
         set(numprocs 1 2 4)
@@ -87,69 +86,89 @@ if(TESTING)
         target_link_libraries(${name} ${MPI_C_LIBRARIES})
         target_link_libraries(${name} ${MPI_CXX_LIBRARIES})
 
-        if(capi)
-            if(ocl)
-                add_dependencies(${name} ctauschocl)
-                target_include_directories(${name} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
-                target_link_libraries(${name} "${CMAKE_CURRENT_BINARY_DIR}/libctauschocl.so")
-            else()
-                add_dependencies(${name} ctausch)
-                target_include_directories(${name} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
-                target_link_libraries(${name} "${CMAKE_CURRENT_BINARY_DIR}/libctausch.so")
+        if(senddevice STREQUAL "cpu")
+            target_compile_definitions(${name} PRIVATE "TEST_SEND_TAUSCH_CPU")
+        endif()
+        if(recvdevice STREQUAL "cpu")
+            target_compile_definitions(${name} PRIVATE "TEST_RECV_TAUSCH_CPU")
+        endif()
+
+        if(senddevice STREQUAL "cuda" OR recvdevice STREQUAL "cuda")
+            target_include_directories(${name} PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
+            target_link_libraries(${name} ${CUDART_LIBRARY})
+            if(senddevice STREQUAL "cuda")
+                target_compile_definitions(${name} PRIVATE "TEST_SEND_TAUSCH_CUDA")
+            endif()
+            if(recvdevice STREQUAL "cuda")
+                target_compile_definitions(${name} PRIVATE "TEST_RECV_TAUSCH_CUDA")
             endif()
         endif()
-        if(ocl)
+
+        if(senddevice STREQUAL "opencl" OR recvdevice STREQUAL "opencl")
             target_include_directories(${name} PUBLIC "${OpenCL_INCLUDE_DIRS}")
             target_link_libraries(${name} "${OpenCL_LIBRARIES}")
+            if(senddevice STREQUAL "opencl")
+                target_compile_definitions(${name} PRIVATE "TEST_SEND_TAUSCH_OPENCL")
+            endif()
+            if(recvdevice STREQUAL "opencl")
+                target_compile_definitions(${name} PRIVATE "TEST_RECV_TAUSCH_OPENCL")
+            endif()
         endif()
-        if(cuda)
-            target_include_directories(${name} PUBLIC "${CUDA_INCLUDE_DIRS}")
-            target_link_libraries(${name} "${CUDA_LIBRARIES}")
-        endif()
-        if(hip)
-            target_include_directories(${name} PUBLIC "${HIP_INCLUDE_DIRS}")
+
+        if(senddevice STREQUAL "hip" OR recvdevice STREQUAL "hip")
+            target_include_directories(${name} PRIVATE ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
+            target_include_directories(${name} PRIVATE "${HIP_INCLUDE_DIRS}")
             target_link_libraries(${name} "${HIP_LIBRARIES}")
+            target_link_libraries(${name} ${CUDART_LIBRARY})
+            if(senddevice STREQUAL "hip")
+                target_compile_definitions(${name} PRIVATE "TEST_SEND_TAUSCH_HIP")
+            endif()
+            if(recvdevice STREQUAL "hip")
+                target_compile_definitions(${name} PRIVATE "TEST_RECV_TAUSCH_HIP")
+            endif()
         endif()
+
         foreach(n IN LISTS numprocs)
-            add_test(NAME ${name}_${n} COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 1 "./${name}")
+            add_test(NAME ${name}_${n} COMMAND ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} ${n} "./${name}")
         endforeach()
 
     endfunction(add_mpi_test)
 
     find_package(MPI COMPONENTS C REQUIRED)
     # add_mpi_test(capi_cpu "testing/ctausch/cpu.c" false false true false)
-    # add_mpi_test(cpu2cpu "testing/cpu2cpu/main.cpp testing/cpu2cpu/derived.cpp testing/cpu2cpu/packunpack.cpp testing/cpu2cpu/empty.cpp testing/cpu2cpu/randomaccess.cpp" false false false false)
-
-    if(TEST_OPENCL)
-
-        find_package(OpenCL REQUIRED)
-        add_mpi_test(capi_ocl "testing/ctausch/opencl.c" true false true false)
-        add_mpi_test(cpu2ocl "testing/cpu2ocl/main.cpp testing/cpu2ocl/packunpack.cpp testing/cpu2ocl/empty.cpp testing/cpu2ocl/randomaccess.cpp" true false false false)
-        add_mpi_test(ocl2cpu "testing/ocl2cpu/main.cpp testing/ocl2cpu/packunpack.cpp testing/ocl2cpu/empty.cpp testing/ocl2cpu/randomaccess.cpp" true false false false)
-        add_mpi_test(ocl2ocl "testing/ocl2ocl/main.cpp testing/ocl2ocl/packunpack.cpp testing/ocl2ocl/empty.cpp testing/ocl2ocl/randomaccess.cpp" true false false false)
-
-    endif()
+    add_mpi_test(cpu2cpu "cpu" "cpu")
 
     if(TEST_CUDA)
-
-        find_package(CUDA REQUIRED)
-        add_mpi_test(cpu2cuda "testing/cpu2cuda/main.cpp testing/cpu2cuda/packunpack.cpp testing/cpu2cuda/empty.cpp testing/cpu2cuda/randomaccess.cpp" false true false false)
-        add_mpi_test(cuda2cpu "testing/cuda2cpu/main.cpp testing/cuda2cpu/packunpack.cpp testing/cuda2cpu/empty.cpp testing/cuda2cpu/randomaccess.cpp" false true false false)
-        add_mpi_test(cuda2cuda "testing/cuda2cuda/main.cpp testing/cuda2cuda/packunpack.cpp testing/cuda2cuda/empty.cpp testing/cuda2cuda/randomaccess.cpp" false true false false)
-
-        if(TEST_OPENCL)
-            add_mpi_test(cuda2ocl "testing/cuda2ocl/main.cpp testing/cuda2ocl/packunpack.cpp testing/cuda2ocl/empty.cpp testing/cuda2ocl/randomaccess.cpp" true true false false)
-            add_mpi_test(ocl2cuda "testing/ocl2cuda/main.cpp testing/ocl2cuda/packunpack.cpp testing/ocl2cuda/empty.cpp testing/ocl2cuda/randomaccess.cpp" true true false false)
-        endif()
-
-    endif()
-
-    if(TEST_CUDA_AWARE)
-        add_mpi_test(cudaaware "testing/cudaaware/main.cpp testing/cudaaware/cuda2cuda.cpp testing/cudaaware/cuda2cpu.cpp testing/cudaaware/cpu2cuda.cpp" false true false false)
+        add_mpi_test(cpu2cuda "cpu" "cuda")
+        add_mpi_test(cuda2cpu "cuda" "cpu")
+        add_mpi_test(cuda2cuda "cuda" "cuda")
     endif()
 
     if(TEST_HIP)
-        add_mpi_test(hip2hip "testing/hip2hip/main.cpp testing/hip2hip/packunpack.cpp testing/hip2hip/empty.cpp testing/hip2hip/randomaccess.cpp" false false false true)
+        add_mpi_test(cpu2hip "cpu" "hip")
+        add_mpi_test(hip2cpu "hip" "cpu")
+        add_mpi_test(hip2hip "hip" "hip")
+    endif()
+
+    if(TEST_OPENCL)
+        add_mpi_test(cpu2ocl "cpu" "opencl")
+        add_mpi_test(ocl2cpu "opencl" "cpu")
+        add_mpi_test(ocl2ocl "opencl" "opencl")
+    endif()
+
+    if(TEST_CUDA AND TEST_HIP)
+        add_mpi_test(cuda2hip "cuda" "hip")
+        add_mpi_test(hip2cuda "hip" "cuda")
+    endif()
+
+    if(TEST_CUDA AND TEST_OPENCL)
+        add_mpi_test(cuda2ocl "cuda" "opencl")
+        add_mpi_test(ocl2cuda "opencl" "cuda")
+    endif()
+
+    if(TEST_HIP AND TEST_OPENCL)
+        add_mpi_test(hip2ocl "hip" "opencl")
+        add_mpi_test(ocl2hip "opencl" "hip")
     endif()
 
 endif()
